Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Perfcharts by vfreex</title>
+    <title>Perfcharts by perfcharts</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -18,13 +18,13 @@
         <h1>Perfcharts</h1>
         <p>Perfcharts is a free software written in Java, which reads performance testing and system monitoring results from Jmeter, NMON, and/or other applications to produce charts for further analysis. It can generate any line and bar chart from any kind of data with appropriate extensions, but now is specially designed for performance tesing business.  With this tool, you can get analysis charts by just putting a Jmeter result file (.jtl), some NMON resource monitoring logs (.nmon), and CPU load monitoring logs (.load) into a directory then just running the tool. This tool make it possible to enable automatic performance testing.</p>
 
-        <p class="view"><a href="https://github.com/vfreex/perfcharts">View the Project on GitHub <small>vfreex/perfcharts</small></a></p>
+        <p class="view"><a href="https://github.com/perfcharts/perfcharts">View the Project on GitHub <small>perfcharts/perfcharts</small></a></p>
 
 
         <ul>
-          <li><a href="https://github.com/vfreex/perfcharts/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/vfreex/perfcharts/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/vfreex/perfcharts">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/perfcharts/perfcharts/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/perfcharts/perfcharts/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/perfcharts/perfcharts">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
@@ -340,7 +340,7 @@ chmod +x ../bin/*
 </ul>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/vfreex">vfreex</a></p>
+        <p>This project is maintained by <a href="https://github.com/perfcharts">perfcharts</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
